fixed horizontal scroll

--- a/home.css
+++ b/home.css
@@ -128,7 +128,7 @@ body {
   font-weight: 575;
 }
 
-.column2,item{
+.column2{
   float: left;
   width: 50%;
   padding: 70px;
@@ -141,7 +141,7 @@ body {
 .cont1::after,
 .cont2::after,
 footer::after,
-.row::after {
+.myrow::after {
   content: "";
   display: table;
   clear: both;
@@ -236,9 +236,4 @@ footer {
 
 .offcanvas-title {
   color: black;
-}
-* {
-  background: #000 !important;
-  color: #0f0 !important;
-  outline: solid #f00 1px !important;
 }
